fix: scrollbar dark colors

--- a/projects/components/styles/themes/_components/scrollbar.scss
+++ b/projects/components/styles/themes/_components/scrollbar.scss
@@ -14,11 +14,11 @@ body *:not(.emr-native-scroll)::-webkit-scrollbar-thumb {
 
 html.dark {
   body *:not(.emr-native-scroll)::-webkit-scrollbar-track {
-    @apply bg-neutral-500;
+    @apply bg-neutral-700;
   }
 
   body *:not(.emr-native-scroll)::-webkit-scrollbar-thumb {
-    @apply rounded-sm bg-neutral-200 hover:bg-neutral-300;
+    @apply rounded-sm bg-neutral-600 hover:bg-neutral-500;
   }
 }
 
